--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -24,6 +24,10 @@
     width: 50%;
   }
 
+  div#formulario > p {
+    font-size: 1.0em;
+  }
+
 }
 
 @media screen and (min-width: 992px) {
@@ -38,14 +42,18 @@
   }
 
   section#login > div#imagem {
-    float: left;
+    float: right;
     width: 50%;
     height: 100%;
   }
 
   section#login > div#formulario {
-    float: right;
+    float: left;
     width: 50%;
+  }
+
+  div#formulario > p {
+    font-size: 1.2em;
   }
 
 }
