--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,8 +36,8 @@ section#login {
   overflow: hidden; /* Tudo o que estiver fora da borda ficará escondido */
 
   background-color: white;
-  width: 250px;
-  height: 500px;
+  width: 300px;
+  height: 580px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.596);
 }
@@ -52,4 +52,80 @@ section#login > div#imagem {
 section#login > div#formulario {
   padding: 10px;
   display: block;
+}
+
+div#formulario > h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+div#formulario > p {
+  font-size: 0.8em;
+}
+
+.campo {
+  background-color: #5f2c82;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  margin: 5px 0px;
+}
+
+.campo > label {
+  display: none;
+}
+
+input#iemail {
+  margin-top: 7px;
+  height: 25px;
+  width: 230px;
+  border-radius: 5px;
+}
+
+input#isenha {
+  margin-top: 7px;
+  height: 25px;
+  width: 230px;
+  border-radius: 5px;
+}
+
+/* Forma de se referenciar a um botão tipo "Submit" nas CSS */
+.submit-button {
+  display: block;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  background-color: #49a09d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.submit-button:hover {
+  background-color: #2d6462;
+}
+
+.botao {
+  display: block;
+  text-align: center;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  padding-top: 10px;
+  margin-top: 5px;
+  background-color: white;
+  border: 1px #49a09d solid;
+  border-radius: 5px;
+  text-decoration: none; /* Tira o sublinhado */
+  color:#094745;
+}
+
+.botao:hover {
+  background-color: #6cd3cf;
+}
+
+.botao > span {
+  font-size: 0.9em;
 }
