--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -2,6 +2,7 @@
 
 /* CSS para demais dispositivos */
 
+/* CSS para Tablets*/
 @media screen and (min-width: 768px) and (max-width: 992px) {
   
   body {
@@ -11,17 +12,18 @@
 
   section#login {
     width: 80vw;
+    height: 400px;
   }
 
   section#login > div#imagem {
     float: left; /* Joga a div para o lado esquerdo */
-    width: 50%;
+    width: 40%;
     height: 100%;
   }
 
   section#login > div#formulario {
     float: right; /* Joga a div para o lado direito */
-    width: 50%;
+    width: 60%;
   }
 
   div#formulario > p {
@@ -30,6 +32,7 @@
 
 }
 
+/* CSS para Desktop */
 @media screen and (min-width: 992px) {
 
   body {
@@ -39,6 +42,7 @@
 
   section#login {
     width: 950px;
+    height: 430px;
   }
 
   section#login > div#imagem {
