--- a/estilos/style.css
+++ b/estilos/style.css
@@ -89,7 +89,8 @@ div#formulario > p {
   background-color: #94cfcd;
   font-size: 1em;
   /* largura 100% da div "campo" menos 44px*/
-  width: calc(100% - 44px); 
+  /* width: calc(100% - 44px); */ 
+  width: 80%;
   height: 100%;
   border: 0px;
   border-radius: 8px;
